--- a/style.css
+++ b/style.css
@@ -2,36 +2,33 @@
     width: 950px;
     background-color: silver;
     margin: 0px auto;
-    padding: 10px;
+   padding: 10px;
 }
 .top-nav {
     height: 120px;
     background-color: green;
     margin-bottom: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 .side-nav {
     height: 300px;
     width: 200px;
     background-color: blue;
-    margin-left: 10px;
+    display: inline-block;
 }
 .main {
     height: 400px;
     width: 700px;
     background-color: red;
-    padding: 20px;
-    margin: 20px;
-    vertical-align:top;
     display: inline-block;
+    vertical-align: top;
+    padding: 20px;
 }
 .sub-content {
     height: 200px;
     width: 210px;
     display: inline-block;
     background-color: yellow;
+    margin: 10px;
 }
 #advertisement {
     height: 120px;
